# My_notes

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
application/: note_app.py  sub_apps.py  user.py
application/scripts/: run.py
my_notes/: note_app.py  run.py  sub_apps.py
my_notes/data/: user.py
tests/: conftest.py  test_sub_app.py
